añadidos comentarios javadoc